Fix bug of wrapping text

--- a/smallscreen.css
+++ b/smallscreen.css
@@ -147,6 +147,7 @@ h5 {
   color: hsla(0, 0%, 100%, 0.6);
   text-decoration: none;
   font-size: 12px;
+  white-space: nowrap;
 }
 
 .article-flex {
